--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
+package-mode = false
 dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
